# shadownet-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: actionlint.yml  ci.yml  release.yml
src/shadownet/: __init__.py  errors.py  logging.py  trust.py
src/shadownet/a2a/: __init__.py  client.py  envelope.py  errors.py  fastapi.py  server.py  session.py
src/shadownet/crypto/: __init__.py  ed25519.py  jwt.py  multibase.py
src/shadownet/did/: __init__.py  document.py  errors.py  key.py  resolver.py  web.py
src/shadownet/mcp/: __init__.py  protocol.py  register.py  tools.py
src/shadownet/sca/: __init__.py  callback.py  client.py  csr.py  errors.py  policy.py  predicate.py
src/shadownet/sns/: __init__.py  client.py  errors.py  record.py
src/shadownet/vc/: __init__.py  credential.py  errors.py  freshness.py  presentation.py  status_list.py
src/shadownet/webhook/: __init__.py  dispatch.py  errors.py  queue.py  verify.py
tests/: conftest.py
tests/conformance/: test_envelope_schema.py  test_subject_credential_schema.py
tests/integration/: test_birthday_flow.py
tests/unit/: test_a2a_client.py  test_a2a_envelope.py  test_a2a_fastapi.py  test_a2a_handshake.py  test_a2a_session.py  test_did_key.py  test_did_web.py  test_ed25519.py  test_freshness.py  test_jwt.py  test_mcp.py  test_multibase.py  test_predicate.py  test_presentation.py  test_sca_callback.py  test_sca_client.py  test_sca_csr.py  test_sca_policy.py  test_smoke.py  test_sns_client.py  test_sns_record.py  test_status_list.py  test_trust.py  test_v0_1_2_regressions.py  test_vc.py  test_webhook_dispatch.py  test_webhook_verify.py
