[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "shadownet"
description = "Python SDK for the Shadownet protocol."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Shadownet contributors" }]
keywords = ["shadownet", "did", "vc", "a2a", "mcp", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "cryptography>=43",
    "pyjwt[crypto]>=2.9",
    "mcp>=1.2",
    "a2a-sdk>=0.2",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.115",
    "starlette>=0.40",
]

[project.urls]
Homepage = "https://github.com/shadownet-protocol/shadownet-py"
Specifications = "https://github.com/shadownet-protocol/shadownet-specs"
Issues = "https://github.com/shadownet-protocol/shadownet-py/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.21",
    "jsonschema>=4.23",
    "ruff>=0.7",
]

[tool.hatch.version]
path = "src/shadownet/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/shadownet"]

[tool.hatch.build.targets.sdist]
include = ["src/shadownet", "README.md", "LICENSE", "CLAUDE.md"]

# ---- ruff ----
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "PIE",  # flake8-pie
    "PERF", # perflint
    "RUF",  # ruff-specific
    "ASYNC",
    "S",    # bandit
    "N",    # pep8-naming
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # asserts ok in tests
    "PT011",  # pytest.raises broad-match
    "N818",   # error class names mirror spec wire codes (Revoked, LevelInsufficient, …)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]

[tool.ruff.lint.isort]
known-first-party = ["shadownet"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- pytest ----
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
markers = [
    "network: tests that require live network access (deselect with '-m \"not network\"')",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/shadownet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
